--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -29,12 +29,43 @@ body {
   @apply font-bold leading-[1];
 }
 
+.container {
+	position: relative;
+	z-index: 2;
+}
+
+.section {
+	position: relative;
+	background-size: cover;
+	background-position-x: 20%;
+	background-repeat: no-repeat;
+	&:after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background-color: rgba(2, 15, 8, 0.5);
+		z-index: 1;
+	}
+}
+.hero {background-image: url(../../public/images/hero/hero-bg.png);}
+.about {background-image: url(../../public/images/about/about-bg.png);}
+
+.section-title {
+	@apply uppercase font-medium text-[40px] leading-[1.4] -tracking-[1.6px] md:text-[67px] md:-tracking-[2.68px] md:leading-[1.17] xl:text-[98px] xl:-tracking-[3.92px] xl:leading-[1.22];
+}
+.section-text {
+	@apply font-extralight leading-[1.4] md:text-base md:leading-[1.25] xl:text-lg xl:leading-[1.33];
+}
+
 .menu {
   display: flex;
   justify-content: center;
   align-items: center;
   @media screen and (max-width: 767px) {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 100vw;
@@ -55,7 +86,9 @@ body {
     visibility: visible;
     opacity: 1;
   }
-
+		body.is-open {
+			overflow: hidden;
+		}
   .nav {
     @apply inline-flex flex-col gap-12 text-lg tracking-[0.1125rem] md:flex-row md:gap-6 md:text-sm md:items-center xl:gap-14;
   }
@@ -92,24 +125,4 @@ body {
   &::after {
     transform: rotate(180deg);
   }
-}
-
-section {
-  background-color: rgba(2, 15, 8, 0.5);
-  background-size: cover;
-  background-repeat: no-repeat;
-  &:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(2, 15, 8, 0.5);
-    z-index: 1;
-  }
-}
-
-.hero {
-  background-image: url(../../public/images/hero/hero-bg.png);
 }
