--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -30,39 +30,62 @@ body {
 }
 
 .container {
-	position: relative;
-	z-index: 2;
+  position: relative;
+  z-index: 2;
 }
 
 .section {
-	position: relative;
-	background-size: cover;
-	background-position-x: 20%;
-	background-repeat: no-repeat;
-	&:after {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		background-color: rgba(2, 15, 8, 0.5);
-		z-index: 1;
-	}
+  position: relative;
+  background-size: cover;
+  background-position-x: 20%;
+  background-repeat: no-repeat;
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(2, 15, 8, 0.5);
+    z-index: 1;
+  }
 }
-.hero {background-image: url(../../public/images/hero/hero-bg.png);}
-.about {background-image: url(../../public/images/about/about-bg.png);}
-.slide01 {background-image: url(../../public/images/services/serv-bg-1.png);}
-.slide02 {background-image: url(../../public/images/services/serv-bg-2.png);}
-.slide03 {background-image: url(../../public/images/services/serv-bg-3.png);}
-.slide04 {background-image: url(../../public/images/services/serv-bg-4.png);}
-.slide05 {background-image: url(../../public/images/services/serv-bg-5.png);}
+.hero {
+  background-image: url(../../public/images/hero/hero-bg.png);
+}
+.about {
+  background-image: url(../../public/images/about/about-bg.png);
+}
+.slide01 {
+  background-position-x: 80%;
+  background-image: url(../../public/images/services/serv-bg-1.png);
+}
+.slide02 {
+  background-position-x: 55%;
+  background-image: url(../../public/images/services/serv-bg-2.png);
+}
+.slide03 {
+  background-position-x: 100%;
+  background-image: url(../../public/images/services/serv-bg-3.png);
+}
+.slide04 {
+  background-position-x: 80%;
+  background-image: url(../../public/images/services/serv-bg-4.png);
+}
+.slide05 {
+  background-position-x: 80%;
+  background-image: url(../../public/images/services/serv-bg-5.png);
+}
+.career {
+  background-position-x: 50%;
+  background-image: url(../../public/images/career/career-bg.png);
+}
 
 .section-title {
-	@apply uppercase font-medium text-[40px] leading-[1.4] -tracking-[1.6px] md:text-[67px] md:-tracking-[2.68px] md:leading-[1.17] xl:text-[98px] xl:-tracking-[3.92px] xl:leading-[1.22];
+  @apply uppercase font-medium text-[40px] leading-[1.4] -tracking-[1.6px] md:text-[67px] md:-tracking-[2.68px] md:leading-[1.17] xl:text-[98px] xl:-tracking-[3.92px] xl:leading-[1.22];
 }
 .section-text {
-	@apply font-extralight leading-[1.4] md:text-base md:leading-[1.25] xl:text-lg xl:leading-[1.33];
+  @apply font-extralight leading-[1.4] md:text-base md:leading-[1.25] xl:text-lg xl:leading-[1.33];
 }
 
 .menu {
@@ -91,9 +114,9 @@ body {
     visibility: visible;
     opacity: 1;
   }
-		body.is-open {
-			overflow: hidden;
-		}
+  body.is-open {
+    overflow: hidden;
+  }
   .nav {
     @apply inline-flex flex-col gap-12 text-lg tracking-[0.1125rem] md:flex-row md:gap-6 md:text-sm md:items-center xl:gap-14;
   }
@@ -133,18 +156,75 @@ body {
 }
 
 .current-item {
-	position: relative;
-	color: #fff;
-	font-weight: 500;
-	padding-left: 16px;
-	&::before {
-		content: '';
-		position: absolute;
+  position: relative;
+  color: #fff;
+  font-weight: 500;
+  padding-left: 16px;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: rotate(45deg) translate(50%, 50%);
+    width: 6px;
+    height: 6px;
+    background-color: #fff;
+  }
+}
+
+.whyUs-item {
+  @apply space-y-2;
+}
+.whyUs-subtitle {
+  @apply font-normal text-[14px] leading-[1.43];
+}
+.whyUs-text {
+  @apply font-extralight text-[12px] leading-[1.67];
+}
+.label {
+  @apply block text-[12px] tracking-[2.4px] leading-[2];
+}
+.input {
+  @apply bg-white/5 font-[13px] leading-[1.85] px-2 w-full;
+}
+
+.agreement {
+  position: relative;
+  cursor: pointer;
+  transition: all 300ms ease-in;
+  & .agreement-text::before {
+    content: '';
+    position: absolute;
+    width: 22px;
+    height: 22px;
 		left: 0;
 		top: 0;
-		transform: rotate(45deg) translate(50%, 50%);
-		width: 6px;
-		height: 6px;
-		background-color: #fff;
-	}
+    border: 1px solid #fff;
+    padding: 3px;
+  }
+		.agreement-text::after {
+			content: '';
+			position: absolute;
+			width: 14px;
+			height: 14px;
+			left: 4px;
+			top: 4px;
+			background-color: rgba(255, 255, 255, 0.1);
+			padding: 3px;
+		}
+}
+
+.checkbox:checked+.agreement-text::after {
+	background-color: white;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
