--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -122,9 +122,8 @@ body {
   }
 }
 
-.btn-join {
-  position: relative;
 
+.btn-join {
   &::before,
   &::after {
     position: absolute;
@@ -155,6 +154,9 @@ body {
   }
 }
 
+.slide-item {
+	@apply transition-all duration-300 ease-in hover:text-white hover:pl-2
+}
 .current-item {
   position: relative;
   color: #fff;
@@ -182,7 +184,7 @@ body {
   @apply font-extralight text-[12px] leading-[1.67];
 }
 .form {
-	@apply p-6 space-y-6 font-extralight;
+	@apply space-y-4 font-extralight;
 	& .error {
 		@apply text-red-600;
 	}
@@ -228,6 +230,9 @@ body {
 
 .checkbox:checked+.agreement-text::after {
 	background-color: white;
+}
+.btn-send {
+	@apply block font-medium text-[30px] leading-[1.33] p-[5px] border border-transparent w-auto ml-auto transition-all duration-300 ease-in hover:scale-[1.05] hover:border-white hover:bg-white/5;
 }
 
 .visually-hidden {
