--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -36,8 +36,14 @@ body {
 
 .section {
   padding: 56px 0;
+	&.hero {
+		padding-top: 104px;
+	}
   @media (min-width: 768px) {
     padding: 64px 0;
+		&.hero {
+				padding-top: 128px;
+			}
   }
   @media (min-width: 768px) {
     padding: 104px 0;
